fix(AudioPlayer): remove unnecessary align-self property from ProgressBar input

--- a/frontend/src/component/AudioPlayer/AudioPlayer.module.css
+++ b/frontend/src/component/AudioPlayer/AudioPlayer.module.css
@@ -56,7 +56,6 @@
     }
 
     .ProgressBar input {
-        align-self: stretch;
         width: 100%;
     }
 
